Annotations added, minor updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-/out/artifacts/Manga_jar/console.log
 /console.log
-/out/artifacts/Manga_jar/log.log
 /log.log
-/out/artifacts/Manga_jar/Manga.jar
 /manga.properties
-/logs/app.log
-/out/production/Manga/Log.class
+/logs/
+/manga/
+/out/
